<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditUserProfileActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/profilePictureImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_picture_imageview_content_description"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_profile_picture_round" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="16dp"
                android:layout_weight="3"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints="text"
                        android:gravity="start"
                        android:hint="@string/name_edittext_text"
                        android:inputType="textPersonName"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/surnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:autofillHints="text"
                        android:gravity="start"
                        android:hint="@string/surname_edittext_text"
                        android:inputType="textPersonName"
                        android:singleLine="true" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/general_information"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_weight="3"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:autofillHints="text"
                        android:gravity="start"
                        android:hint="@string/email_edittext_text"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/birthDateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:autofillHints="text"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/sexRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/maleRadioButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/male_radiobutton_text" />

                        <RadioButton
                            android:id="@+id/femaleRadioButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/female_radiobutton_text" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/saveProfileButton"
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:onClick="saveProfile"
            android:text="@string/save_profile_button_text"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </FrameLayout>

</LinearLayout>