<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/profilePictureImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_picture_imageview_content_description"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_profile_picture_round" />

            <TextView
                android:id="@+id/fullNameTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/full_name"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="36dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/general_information"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                        android:drawablePadding="8dp"
                        android:gravity="start|center" />

                    <TextView
                        android:id="@+id/birthDateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_date_range_black_24dp"
                        android:drawablePadding="8dp"
                        android:gravity="start|center" />

                    <TextView
                        android:id="@+id/sexTextView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_person_outline_black_24dp"
                        android:drawablePadding="8dp"
                        android:gravity="start|center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="128dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:onClick="editProfile"
            android:text="@string/edit_profile_button_text"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </FrameLayout>

</LinearLayout>